--- a/web/src/playlists/playlist-builder/playlist-builder.scss
+++ b/web/src/playlists/playlist-builder/playlist-builder.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
+
+  #preview-area {
+    display: flex;
+    flex: 1 1 auto;
+  }
 }
