--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -7,6 +7,8 @@ html {
 
 body {
   height: 100%;
+  background-color: #333;
+  color: #eee;
 }
 
 #root {
@@ -23,4 +25,8 @@ body {
       flex: 1 1 auto;
     }
   }
+}
+
+.home {
+  text-align: center;
 }
