Add rule fields for playlist builder on frontend

--- a/web/src/core/components/layout/column.scss
+++ b/web/src/core/components/layout/column.scss
@@ -1,9 +1,5 @@
-.row {
-    margin: 0;
-    flex: 1 1 auto;
-}
-
 .column {
     display: flex;
     flex: 1 1 auto;
+    flex-direction: column;
 }
