--- a/web/src/playlists/playlist-builder/playlist-builder.scss
+++ b/web/src/playlists/playlist-builder/playlist-builder.scss
@@ -6,7 +6,7 @@
   .rule-group {
     flex: 1 1 auto;
     padding: 6px;
-    border: 1px solid #666;
+    // border: 1px solid #666;
   }
 
   #preview-area {
