--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <!-- Adds the splash screen definition -->
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/splashscreen_bg</item>
+        <item name="android:windowBackground">@color/app_bg</item>
         <item name="android:background">@drawable/background_splash</item>
     </style>
 
