--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+        <item name="android:windowBackground">@color/app_bg</item>
     </style>
 
     <!-- Adds the splash screen definition -->
