--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:statusBarColor">@color/splashscreen_bg</item>
         <item name="android:windowBackground">@color/app_bg</item>
-        <item name="android:background">@drawable/background_splash</item>
+        <item name="android:windowSplashScreenBackground">@drawable/background_splash</item>
     </style>
 
 </resources>
