--- a/native/android/app/src/main/res/values/colors.xml
+++ b/native/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splashscreen_bg">#009688</color>
     <color name="app_bg">#009688</color>
+    <color name="bootsplash_background">#009688</color>
 </resources>
