--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -7,11 +7,11 @@
         <item name="android:windowBackground">@color/app_bg</item>
     </style>
 
-    <!-- Adds the splash screen definition -->
-    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/splashscreen_bg</item>
-        <item name="android:windowBackground">@color/app_bg</item>
-        <item name="android:windowSplashScreenBackground">@drawable/background_splash</item>
+    <!-- BootTheme should inherit from Theme.SplashScreen -->
+    <style name="BootTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/bootsplash_background</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/bootsplash_logo</item>
+        <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
 
 </resources>
