--- a/native/android/app/src/main/res/values/styles.xml
+++ b/native/android/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:textColor">#000000</item>
         <item name="android:windowBackground">@color/app_bg</item>
         <item name="android:navigationBarColor">@color/app_bg</item>
+        <item name="android:colorPrimaryDark">@color/app_bg</item>
     </style>
 
     <!-- BootTheme should inherit from Theme.SplashScreen -->
